tests/machine/x/php/group_by_conditional_sum.error
PHP Warning:  Attempt to read property "cat" on array in /workspace/mochi/tests/machine/x/php/group_by_conditional_sum.php on line 6
PHP Warning:  Attempt to read property "cat" on array in /workspace/mochi/tests/machine/x/php/group_by_conditional_sum.php on line 6
PHP Warning:  Attempt to read property "cat" on array in /workspace/mochi/tests/machine/x/php/group_by_conditional_sum.php on line 6
PHP Warning:  Attempt to read property "key" on array in /workspace/mochi/tests/machine/x/php/group_by_conditional_sum.php on line 12
PHP Warning:  Attempt to read property "key" on array in /workspace/mochi/tests/machine/x/php/group_by_conditional_sum.php on line 12
PHP Warning:  Undefined variable $g in /workspace/mochi/tests/machine/x/php/group_by_conditional_sum.php on line 14
PHP Warning:  foreach() argument must be of type array|object, null given in /workspace/mochi/tests/machine/x/php/group_by_conditional_sum.php on line 14
PHP Warning:  Undefined variable $g in /workspace/mochi/tests/machine/x/php/group_by_conditional_sum.php on line 20
PHP Warning:  foreach() argument must be of type array|object, null given in /workspace/mochi/tests/machine/x/php/group_by_conditional_sum.php on line 20
PHP Fatal error:  Uncaught DivisionByZeroError: Division by zero in /workspace/mochi/tests/machine/x/php/group_by_conditional_sum.php:24
Stack trace:
#0 /workspace/mochi/tests/machine/x/php/group_by_conditional_sum.php(29): {closure}()
#1 {main}
  thrown in /workspace/mochi/tests/machine/x/php/group_by_conditional_sum.php on line 24
